--- a/estilo.css
+++ b/estilo.css
@@ -1,52 +1,42 @@
 
 body {
- background-color: #ceacce;
+ background-color: #e0d0df;
 }
 header {
     background-color: #c08ec0;
     color: #ffffff;
     text-align: center;
-    padding: 15px 15px 20px 20px;
    }
    
    h1 {
     background-color: #c08ec0;
     color: #ffffff;
-    margin-bottom:15px 0px 0px 0px ;
   
    }
    nav {
-    background-color: #c08ec0;
+    background-color: #cebfcd;
    }
    nav ul {
     list-style: none;
-    padding: 0px 0px 0px 0px;
    }
    nav ul li {
     display: inline;
-    margin:0px 0px 15px 15px;
    }
    a {
     text-decoration: none;
     color: #ffffff;
-    padding:10px 10px 20px 20px;
    }
    h2 {
     background-color: #c08ec0;
     color: #ffffff;
-    padding:10px 10px 10px 10px;
    }
 
    article {
     border: 1px solid #c08ec0;
  background-color: #ffffff;
- margin-bottom:10px;
- padding: 10px 10px 10px 10px;
    }
    footer {
     background-color: #c08ec0;
     color: #ffffff;
     text-align: center;
-    padding: 10px 10px 10px 10px;
-    margin-bottom: 20px;
    }
